--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -40,6 +40,7 @@ library:
   - path-io
   - persistent-sqlite
   - pretty-show
+  - random
   - servant-auth-client
   - servant-client
   - shakespeare
