--- a/stack.yaml
+++ b/stack.yaml
@@ -23,6 +23,7 @@ packages:
 - smos-server-gen
 - smos-client
 - smos-client-gen
+- smos-shell
 - smos-sync-client
 - smos-sync-client-gen
 - smos-web-server
