smos-shell in the browser for real

--- a/smos-shell/package.yaml
+++ b/smos-shell/package.yaml
@@ -35,6 +35,7 @@ tests:
   smos-shell-test:
     main:                Spec.hs
     source-dirs:         test
+    build-tools: hspec-discover
     ghc-options:
     - -threaded
     - -rtsopts
