produce a failing test case

--- a/smos-report-gen/package.yaml
+++ b/smos-report-gen/package.yaml
@@ -53,6 +53,7 @@ tests:
     - containers
     - cursor
     - cursor-gen
+    - dirforest
     - genvalidity-containers
     - genvalidity-hspec
     - genvalidity-hspec-aeson
