--- a/stack.yaml
+++ b/stack.yaml
@@ -28,13 +28,8 @@ packages:
 - smos-sync-client-gen
 - smos-web-server
 
-  # - /home/syd/src/sydtest/sydtest
-  # - /home/syd/src/sydtest/sydtest-discover
-  # - /home/syd/src/sydtest/sydtest-persistent-sqlite
-  # - /home/syd/src/sydtest/sydtest-servant
-  # - /home/syd/src/sydtest/sydtest-wai
-  # - /home/syd/src/sydtest/sydtest-yesod
-
+- /home/syd/src/safe-coloured-text/safe-coloured-text
+- /home/syd/src/safe-coloured-text/safe-coloured-text-layout
 
 # These are duplicated in nix/overlay.
 ghc-options:
@@ -133,8 +128,19 @@ extra-deps:
     - cursor
     - cursor-gen
 
+- github: NorfairKing/yamlparse-applicative
+  commit: 7a329d06ffa45595963cf98f34910887115eb471
+  subdirs:
+  - yamlparse-applicative
+
+    # - github: NorfairKing/safe-coloured-text
+    #   commit: 5aebc16ffb138a2fb2277a3fe3074ba68917abdd
+    #   subdirs:
+    #   - safe-coloured-text
+    #   - safe-coloured-text-layout
+
 - github: NorfairKing/sydtest
-  commit: 1343035eb300163cbd97e1b921ddfe0f23af88c9
+  commit: f495c959e7ca579fcdd0217236fe5f5c5f970685
   subdirs:
     - sydtest
     - sydtest-discover
@@ -144,7 +150,7 @@ extra-deps:
     - sydtest-yesod
 
 - github: NorfairKing/validity
-  commit: 0f52f3ba57d099f3d3ced38a2eeae39954906306
+  commit: 86a824729519c154c23f0757f2ce4b9ab93b675a
   subdirs:
     - genvalidity
     - genvalidity-aeson
@@ -187,10 +193,7 @@ extra-deps:
     - validity-vector
 
 
-- github: NorfairKing/yamlparse-applicative
-  commit: 1d381a4cbc9736a2defc916a93cfcf8000ee7e37
-  subdirs:
-  - yamlparse-applicative
+
  
 - github: NorfairKing/yesod-static-remote
   commit: f91fdbc2ac74cf8d005f536cfbbf9b4385cbbba6
