Seperate Web-style package

--- a/smos-docs-site/package.yaml
+++ b/smos-docs-site/package.yaml
@@ -39,6 +39,7 @@ library:
   - smos-single
   - smos-sync-client
   - smos-web-server
+  - smos-web-style
   - template-haskell
   - template-haskell-reload
   - text
