--- a/stack.yaml
+++ b/stack.yaml
@@ -26,6 +26,7 @@ packages:
 - smos-shell
 - smos-sync-client
 - smos-sync-client-gen
+- smos-web-style
 - smos-web-server
 
 # These are duplicated in nix/overlay.
