--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -63,6 +63,7 @@ library:
   - yamlparse-applicative
   - yesod
   - yesod-auth
+  - yesod-autoreload
   - yesod-static
   - yesod-static-remote
   - yesod-websockets
