--- a/stack.yaml
+++ b/stack.yaml
@@ -195,6 +195,8 @@ extra-deps:
  
 - github: NorfairKing/yesod-static-remote
   commit: f91fdbc2ac74cf8d005f536cfbbf9b4385cbbba6
+- github: NorfairKing/yesod-autoreload
+  commit: 2adfb0397ca82a81ee26e0e491fe8b2759d76615
 
 - normaldistribution-1.1.0.3@sha256:2615b784c4112cbf6ffa0e2b55b76790290a9b9dff18a05d8c89aa374b213477,2160
 
