Forward-compatible data format

--- a/smos-calendar-import/package.yaml
+++ b/smos-calendar-import/package.yaml
@@ -55,6 +55,11 @@ tests:
     main: Spec.hs
     source-dirs: test
     build-tools: sydtest-discover
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -Wall
     dependencies:
     - QuickCheck
     - bytestring
