--- a/smos-data/package.yaml
+++ b/smos-data/package.yaml
@@ -21,8 +21,10 @@ library:
   - containers
   - deepseq
   - hashable  
+  - microlens
   - path
   - path-io
+  - semver
   - text
   - time
   - unliftio
