--- a/smos-archive/package.yaml
+++ b/smos-archive/package.yaml
@@ -41,6 +41,11 @@ tests:
     main: Spec.hs
     source-dirs: test
     build-tools: sydtest-discover
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -Wall
     dependencies:
     - QuickCheck
     - containers
