trying to get CI to pass

--- a/.github/workflows/stack-build.yml
+++ b/.github/workflows/stack-build.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master' || github.event.ref == 'refs/heads/development'
+        with:
+          submodules: recursive
 
       - uses: actions/setup-haskell@v1.1.3
         name: Setup Haskell Stack
@@ -46,120 +48,131 @@ jobs:
 
       - name: Build smos-data
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-data
 
       - name: Build smos-data-gen
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-data-gen
 
       - name: Build smos-report
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-report
 
       - name: Build smos-report-gen
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-report-gen
 
       - name: Build smos-convert-org
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-convert-org
 
       - name: Build smos-calendar-import
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-calendar-import
 
       - name: Build smos-single
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-single
 
       - name: Build smos-scheduler
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-scheduler
 
       - name: Build smos-query
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-query
 
       - name: Build smos-archive
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-archive
 
       - name: Build smos-api
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-api
 
       - name: Build smos-api-gen
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-api-gen
 
       - name: Build smos-cursor
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-cursor
 
       - name: Build smos-cursor-gen
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-cursor-gen
 
       - name: Build smos-report-cursor
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-report-cursor
 
       - name: Build smos-report-cursor-gen
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-report-cursor-gen
 
       - name: Build smos-client
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-client
 
       - name: Build smos-client-gen
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-client-gen
 
       - name: Build smos-server
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-server
 
       - name: Build smos-server-gen
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-server-gen
 
       - name: Build smos-sync-client
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-sync-client
 
       - name: Build smos-sync-client-gen
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-sync-client-gen 
+
+      - name: Compile CSS from SCSS files
+        uses: gha-utilities/sass-build@v0.3.7
+        with:
+          source: smos-web-style/style/mybulma.scss
+          destination: smos-web-style/style/mybulma.css
+
+      - name: Build smos-style
+        run: |
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
+            smos-web-tyle
 
       - name: Build smos-web-server
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos-web-server
 
       - name: Build smos
         run: |
-          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic --test-arguments='--seed=42' \
+          stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --pedantic \
             smos
