--- a/smos-shell/package.yaml
+++ b/smos-shell/package.yaml
@@ -31,6 +31,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
     dependencies:
     - smos-shell
 
@@ -43,6 +44,7 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
     dependencies:
     - sydtest
     - smos-shell
