--- a/smos-data-gen/package.yaml
+++ b/smos-data-gen/package.yaml
@@ -64,6 +64,9 @@ benchmarks:
     main: Main.hs
     source-dirs: bench/
     ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
     - -Wall
     dependencies:
     - QuickCheck
