--- a/smos-query/package.yaml
+++ b/smos-query/package.yaml
@@ -45,6 +45,11 @@ executables:
   smos-query:
     main: Main.hs
     source-dirs: app
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -Wall
     dependencies:
     - smos-query
 
