--- a/smos-report-cursor-gen/package.yaml
+++ b/smos-report-cursor-gen/package.yaml
@@ -62,6 +62,9 @@ benchmarks:
     main: Main.hs
     source-dirs: bench/
     ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
     - -Wall
     dependencies:
     - QuickCheck
