--- a/smos-report-gen/package.yaml
+++ b/smos-report-gen/package.yaml
@@ -80,6 +80,9 @@ benchmarks:
     main: Main.hs
     source-dirs: bench/
     ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
     - -Wall
     dependencies:
     - QuickCheck
