--- a/smos-scheduler/package.yaml
+++ b/smos-scheduler/package.yaml
@@ -43,6 +43,11 @@ executables:
   smos-scheduler:
     main: Main.hs
     source-dirs: app
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -Wall
     dependencies:
     - smos-scheduler
 
