--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -78,6 +78,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
     - -optP-Wno-nonportable-include-path # For macos
 
 
