documentation for the new smos-github command

--- a/smos-docs-site/package.yaml
+++ b/smos-docs-site/package.yaml
@@ -33,6 +33,7 @@ library:
   - smos-archive
   - smos-calendar-import
   - smos-data
+  - smos-github
   - smos-query
   - smos-report
   - smos-scheduler
