get smos-calendar-import to compile with stack again

--- a/smos-calendar-import/package.yaml
+++ b/smos-calendar-import/package.yaml
@@ -36,6 +36,7 @@ library:
     - smos-report
     - text
     - time
+    - time-compat
     - validity
     - validity-containers
     - validity-text
