example of sending a notification

--- a/smos-notify/package.yaml
+++ b/smos-notify/package.yaml
@@ -15,12 +15,15 @@ library:
   ghc-options: -Wall
   dependencies:
     - aeson
+    - conduit
     - envparse
     - optparse-applicative
     - path
     - path-io
+    - process
     - smos-data
     - smos-report
+    - text
     - yamlparse-applicative
 
 executables:
