Automatically activate the smos-notify executable every minute

--- a/smos-notify/package.yaml
+++ b/smos-notify/package.yaml
@@ -26,6 +26,7 @@ library:
     - path
     - path-io
     - pretty-relative-time
+    - pretty-show
     - process
     - smos-data
     - smos-report
