only send notifications once

--- a/smos-notify/package.yaml
+++ b/smos-notify/package.yaml
@@ -23,6 +23,8 @@ library:
     - containers
     - envparse
     - hashable
+    - monad-logger
+    - mtl
     - optparse-applicative
     - path
     - path-io
