--- a/smos-server/package.yaml
+++ b/smos-server/package.yaml
@@ -34,6 +34,7 @@ library:
   - persistent-sqlite
   - persistent-template
   - pretty-show
+  - semver
   - servant
   - servant-auth-server
   - servant-server
