Don't err out if the api version endpoint doesn't exist yet, for backwards compatibility as well as forwards compatibility

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -51,6 +51,7 @@
       - "Smos.Sync.Client.isHidden"
       - "Smos.Calendar.Import.RecurrenceRule.Type"
       - "Smos.Calendar.Import.RecurrenceRule.Recurrence.Util"
+      - "Smos.Client"
 - ignore:
     name: "Replace case with maybe"
 - ignore:
