--- a/smos-query/package.yaml
+++ b/smos-query/package.yaml
@@ -28,6 +28,7 @@ library:
   - pretty-relative-time
   - safe-coloured-text
   - safe-coloured-text-layout
+  - safe-coloured-text-terminfo
   - smos-data
   - smos-report
   - text
