--- a/stack.yaml
+++ b/stack.yaml
@@ -130,13 +130,14 @@ extra-deps:
   - yamlparse-applicative
 
 - github: NorfairKing/safe-coloured-text
-  commit: ca42a55ddd5f3d9e866fe33b3b6862e9860f7604
+  commit: 2c8698978faf5556a6f928c5a55c797c3a262808
   subdirs:
   - safe-coloured-text
   - safe-coloured-text-layout
+  - safe-coloured-text-terminfo
 
 - github: NorfairKing/sydtest
-  commit: 876707dbe0c8b84753d1c3f04564e10035b5836d
+  commit: abb96cca367bc4de33c385cd41aa2ff8defb9c6d
   subdirs:
     - sydtest
     - sydtest-discover
